<resources>
    <string name="app_name">Preferencias_API33</string>
    <string name="title_activity_preferencias">PreferenciasActivity</string>

    <string name="grupo_bd">Tipo de BD</string>
    <string name="bd_preferencia">Base de datos</string>
    <string name="preference_bd_off">Interna SQLite</string>
    <string name="preference_bd_on">Externa MySQL, MariaDB</string>
    <string name="pref_serv_externo">Servidor Externo</string>
    <string name="pref_1">Nombre de la BD</string>
    <string name="pref_2">IP del servidor</string>
    <string name="pref_dificultad">Dificultad del juego</string>
    <string name="ver_preferencias">Ver Preferencias</string>
    <string name="tvDificultad">Dificultad elegida</string>
    <string name="tvBD">Base de datos</string>
    <string name="bt_Volver">Volver</string>
    <string name="tvComentario">Pulsa el botón HOME o ATRAS para volver</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>